--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--mete o site responsivo-->
     <title>Ricardo Pereira</title>
     <link rel="stylesheet" href="CSS\estilos.css">
 </head>
@@ -14,8 +15,29 @@
             <li><a href="#">Contacto</a></li>
           <ul>
         </nav>
-        <h1 class="site-title">Ricardo Pereira </h1>
-        <h2 class="site-subtitle">Técnico Especialista de Redes e Sitemas informáticos</h2>
-    </header>         
+        <div>
+            <h1 class="site-title">Ricardo Pereira </h1>
+            <h2 class="site-subtitle">Técnico Especialista de Redes e Sitemas informáticos</h2>
+        </div>
+    </header>
+    <section>
+      <h2>portfólio</h2>
+      <figure>
+        <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+        <figcaption>eCommerce</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+        <figcaption>Mobile</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+        <figcaption>Web design</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+        <figcaption>Projetos pessoais</figcaption>
+      </figure>
+    </section>     
 </body>
 </html>
