--- a/index.html
+++ b/index.html
@@ -5,39 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--mete o site responsivo-->
     <title>Ricardo Pereira</title>
     <link rel="stylesheet" href="CSS\estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&family=Handlee&family=Sedgwick+Ave&display=swap" 
+    rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">portofólio</a></li>
+            <li><a href="#">Projectos</a></li>
             <li><a href="#">Contacto</a></li>
           <ul>
         </nav>
         <div>
-            <h1 class="site-title">Ricardo Pereira </h1>
-            <h2 class="site-subtitle">Técnico Especialista de Redes e Sitemas informáticos</h2>
+            <h1 class="site-title">Ricardo Pereira</h1>
+            <h2 class="site-subtitle">tecnico especialista de</h2>
+            <h2 class="site-subtitle">redes e sitemas informaticos</h2>
+            <h2 class="site-subtitle">Service Desk no MDN</h2>
         </div>
     </header>
-    <section>
-      <h2>portfólio</h2>
-      <figure>
-        <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
-        <figcaption>eCommerce</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
-        <figcaption>Mobile</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-        <figcaption>Web design</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
-        <figcaption>Projetos pessoais</figcaption>
-      </figure>
-    </section>     
+    <section class= "portfolio">
+          <h2>Projectos</h2>
+
+          <div class="grid">
+              <figure>
+                <img class="img-portfolio" src="./img/helpdesk.jfif" alt="helpdesk">
+                <figcaption>HelpDesk</figcaption>
+              </figure>
+              <figure>
+                <img class="img-portfolio" src="./img/manutençaopc.jfif" alt=">Mobile">
+                <figcaption>Manutenção e instalção de Hardware e Software</figcaption>
+              </figure>
+              <figure>
+                <img class="img-portfolio" src="./img/ad.png" alt="ad">
+                <figcaption>AD</figcaption>
+              </figure>
+              <figure>
+                <img class="img-portfolio" src="./img/python.jfif" alt="python">
+                <figcaption>Python beginner</figcaption>
+              </figure>
+          
+          </div>
+          
+        </section>     
 </body>
 </html>
